# amadeus-burger

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
amadeus-burger/core/: config.py
docs/: README.md  index.md
examples/: basic_db_usage.py
src/amadeus_burger/: __init__.py  langgraph.json  settings.py
src/amadeus_burger/agents/: __init__.py  base.py  pipelines.py  pipelines_sam.py
src/amadeus_burger/agents/nodes/: __init__.py  curiosity_node.py  final_answer_node.py  knowledge_base_node.py  knowledge_ingestion_node.py  novelty_evaluator_node.py  web_search_node.py
src/amadeus_burger/agents/tools/: __init__.py  knowledge_base_fetcher_tool.py
src/amadeus_burger/constants/: __init__.py  enums.py  literals.py  settings.py
src/amadeus_burger/db/: __init__.py  base.py  clients.py  schemas.py
src/amadeus_burger/experiments/: experiment_runner.py  metrics.py  snapshot_compressors.py
src/amadeus_burger/scratches/pervious_version/agents/: base.py
src/amadeus_burger/utils/: helpers.py
src/amadeus_burger/visualizers/: base.py  visualizers.py
src/amadeus_burger_auto/: __init__.py  requirements.txt
src/amadeus_burger_auto/agents/: pipelines.py  pipelines_sam.py
src/amadeus_burger_auto/constants/: literals.py
src/amadeus_burger_auto/db/: __init__.py  clients.py
src/amadeus_burger_auto/scratches/: readme.md
src/amadeus_burger_auto/scratches/pervious_version/: __init__.py
tests/: test_db_client.py
