[project]
name = "amadeus-burger"
version = "0.1.0"
description = "An experimental AGI prototype for autonomous knowledge gathering"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Nick", email = "husohome98@gmail.com" },
    { name = "Chris" },
    { name = "Chryth" },
    { name = "Sam" },
    { name = "Tao" },
]
dependencies = [
    "langgraph>=0.0.10",
    "networkx>=3.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py312" 